kubernetes/application/wordpress/namespace.yaml
kind: Namespace
apiVersion: v1
metadata:
  name: kojiki
  labels:
    name: wordpress
