kubernetes/application/wordpress/keycloak-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: keycloak
  namespace: kojiki
  labels:
    app: keycloak
spec:
  selector:
    matchLabels:
      app: keycloak
      tier: frontend
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: keycloak
        tier: frontend
    spec:
      containers:
      - image: quay.io/keycloak/keycloak:latest
        args: 
        - "start"
        name: keycloak
        ports:
        - containerPort: 8080
          name: keycloak
        volumeMounts:
        - name: keycloak-persistent-storage
          mountPath: /opt/keycloak
      volumes:
      - name: keycloak-persistent-storage
        persistentVolumeClaim:
          claimName: keycloak-pv-claim
---
apiVersion: v1
kind: Service
metadata:
  name: keycloak
  namespace: kojiki
  labels:
    app: keycloak
spec:
  ports:
    - port: 8080
  selector:
    app: keycloak
    tier: frontend
  type: NodePort
#---
#apiVersion: networking.k8s.io/v1
#kind: Ingress
#metadata:
#  name: keycloak
#  namespace: kojiki
#  annotations:
#    kubernetes.io/ingress.class: azure/application-gateway
#    cert-manager.io/cluster-issuer: letsencrypt-staging
#    cert-manager.io/acme-challenge-type: http01
#spec:
#  rules:
#  - host: keycloak.kojiki.eu
#    http:
#      paths:
#      - path: /
#        pathType: Prefix
#        backend:
#          service:
#            name: keycloak
#            port:
#              number: 8080
#  tls:
#  - hosts:
#    - keycloak.kojiki.eu
#    secretName: kc-secret-name
